--- a/Zhihu.Universal/Zhihu/View/MainPage.xaml
+++ b/Zhihu.Universal/Zhihu/View/MainPage.xaml
@@ -77,7 +77,7 @@
                         <AdaptiveTrigger MinWindowWidth="900"/>
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="MasterColumn.Width" Value="452"/>
+                        <Setter Target="MasterColumn.Width" Value="502"/>
                         <Setter Target="DetailColumn.Width" Value="*"/>
                         <Setter Target="NavMenuList.Visibility" Value="Visible"/>
                         <Setter Target="NavCommandBar.Visibility" Value="Collapsed"/>
@@ -158,7 +158,7 @@
                     </interactivity:Interaction.Behaviors>
                 </AppBarButton>
                 <AppBarButton Icon="Switch" Foreground="{StaticResource AppBarForeBrush}"
-                              Label="{Binding NightModeOn, Converter={StaticResource NightModeConverter}, ConverterParameter={Binding IsFormalVip}}"
+                              Label="{Binding Theme.IsBlackOn, Source={StaticResource ThemeHelper}, Converter={StaticResource NightModeConverter}, ConverterParameter={Binding IsFormalVip}}"
                               Tapped="SwitchThemeButton_Tapped">
                     <interactivity:Interaction.Behaviors>
                         <core:EventTriggerBehavior EventName="Tapped">
